Mon Sep  6 08:10:00 UTC 2010  Simon Massey  <buildczar at prismtech dot com>

        * ace/ACE.cpp:
        * ace/Acceptor.cpp:
        * ace/SOCK_IO.cpp:
        * ace/SOCK_Dgram.cpp:
        * tests/SOCK_Test.cpp:
        * tests/MT_SOCK_Test.cpp:
        * NEWS:
          Now that release x.8.3. is out, we are attempting to provide the correct
          fix to the original commit by Steve Huston related to handle_ready()
          (Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>)
          and added back the corresponding NEWS entry.

Sat Sep 04 18:08:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/make_release.py:
        * docs/Download.html:
        * etc/index.html:
          Updated because of release

Sat Sep 04 11:30:18 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 5.8.2 released.

Thu Sep  2 14:46:56 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Acceptor.cpp:
        * ace/SOCK_IO.cpp:
        * ace/SOCK_Dgram.cpp:
        * ace/ACE.cpp:
        * tests/SOCK_Test.cpp:
        * tests/MT_SOCK_Test.cpp:
        * NEWS:
          Reverted both commits by Steve Huston related to handle_ready()
          and a NEWS entry.
          Wed Sep  1 19:31:24 UTC 2010  Steve Huston  <shuston@riverace.com>
          Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>
          This is necessary for a quick release of 1.8.2.

Wed Sep  1 19:31:24 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_ready): Changed the timeout behavior to just
          return 0, no errno, as ACE_OS::poll() and ACE_OS::select() both do.
          This restores historic behavior changed inadvertently at
          Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram.cpp:
        * ace/SOCK_IO.cpp:
        * tests/MT_SOCK_Test.cpp: